@@ -1,0 +1,14 @@
+require 'test_helper'
+
+class WebhooksRoutingTest < ActionController::TestCase
+  setup do
+    @routes = ShopifyApp::Engine.routes
+  end
+
+  test "webhooks routing" do
+    assert_routing(
+      { method: 'post', path: 'webhooks/test' },
+      { controller: 'webhooks', action: 'receive', type: 'test' }
+    )
+  end
+end
